--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -33,6 +33,7 @@
 <div translate>attribute</div>
 <div translate>association</div>
 <div translate>property</div>
+<div translate>All types</div>
 <div translate>fi</div>
 <div translate>en</div>
 <div translate>data language</div>
@@ -265,3 +266,4 @@
 <div translate>Match to content</div>
 <div translate>All types</div>
 <div translate>Unique label</div>
+<div translate>All organizations</div>
