--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <title>Tietomallit</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <base href="/" />
 </head>
 
