Add missing translations

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -206,6 +206,10 @@
 <div translate>Edit link</div>
 <div translate>Reference data</div>
 <div translate>Add reference data</div>
+<div translate>Classifications</div>
+<div translate>Add classification</div>
+<div translate>Contributors</div>
+<div translate>Add contributor</div>
 <div translate>Search reference data</div>
 <div translate>search reference data</div>
 <div translate>Reference data name</div>
@@ -267,3 +271,4 @@
 <div translate>All types</div>
 <div translate>Unique label</div>
 <div translate>All organizations</div>
+<div translate>Status</div>
