Modal styles excluding select filters in place

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -272,3 +272,4 @@
 <div translate>Unique label</div>
 <div translate>All organizations</div>
 <div translate>Status</div>
+<div translate>All models</div>
