Add new class/predicate without referencing concept

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -2,12 +2,17 @@
 
 <div translate>not found in the concept database</div>
 <div translate>Define concept for the class</div>
-<div translate>Define concept for the shape</div>
 <div translate>Define concept for the new class</div>
+<div translate>Define concept for the shape</div>
+<div translate>Define concept for the new shape</div>
 <div translate>Define concept for the attribute</div>
 <div translate>Define concept for the new attribute</div>
 <div translate>Define concept for the association</div>
 <div translate>Define concept for the new association</div>
+<div translate>Create new class without referencing concept</div>
+<div translate>Create new shape without referencing concept</div>
+<div translate>Create new association without referencing concept</div>
+<div translate>Create new attribute without referencing concept</div>
 <div translate>suggest</div>
 <div translate>suggestion</div>
 <div translate>and create new</div>
@@ -261,6 +266,7 @@
 <div translate>Page not found</div>
 <div translate>Resource not found</div>
 <div translate>You will be redirected to the front page</div>
+<div translate>You will be redirected to the model</div>
 <div translate>You will be redirected to the model</div>
 <div translate>Please login to perform the action</div>
 <div translate>Duplicate association target</div>
