--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -279,3 +279,8 @@
 <div translate>All organizations</div>
 <div translate>Status</div>
 <div translate>All models</div>
+<div translate>Choose organization</div>
+<div translate>ADMIN</div>
+<div translate>DATA_MODEL_EDITOR</div>
+<div translate>TERMINOLOGY_EDITOR</div>
+<div translate>CODE_LIST_EDITOR</div>
