--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -284,3 +284,5 @@
 <div translate>DATA_MODEL_EDITOR</div>
 <div translate>TERMINOLOGY_EDITOR</div>
 <div translate>CODE_LIST_EDITOR</div>
+<div translate>Maximize</div>
+<div translate>Minimize</div>
