YTI-916 Add heading to new model creating page
Also change breadcrumb title to same as the heading.

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -286,3 +286,5 @@
 <div translate>CODE_LIST_EDITOR</div>
 <div translate>Maximize</div>
 <div translate>Minimize</div>
+<div translate>Add new library</div>
+<div translate>Add new profile</div>
