YTI-930 Filter, show and save status of reference data

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -218,6 +218,7 @@
 <div translate>Search reference data</div>
 <div translate>search reference data</div>
 <div translate>Reference data name</div>
+<div translate>Reference data status</div>
 <div translate>Create new reference data</div>
 <div translate>Edit reference data</div>
 <div translate>Choose reference data</div>
