YTI-837 Add use context to model

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -289,3 +289,8 @@
 <div translate>Minimize</div>
 <div translate>Add new library</div>
 <div translate>Add new profile</div>
+<div translate>InformationPool</div>
+<div translate>InformationSystem</div>
+<div translate>ExchangeFormat</div>
+<div translate>InformationDescription</div>
+<div translate>Use context</div>
