YTI-1035 Add localizations of titles and info texts that were missing

--- a/src/translations/titles.html
+++ b/src/translations/titles.html
@@ -78,3 +78,5 @@
 <div translate>Root class</div><div translate>Root class info</div>
 
 <div translate>Creator</div><div translate>Creator info</div>
+<div translate>Localname</div><div translate>Localname info</div>
+<div translate>Read-only</div><div translate>Read-only info</div>
